Book_Files/_build/html/reports/osemosys_notebook_version.log
Traceback (most recent call last):
  File "C:\Users\crist\anaconda3\envs\IESVic_Python\lib\site-packages\jupyter_cache\executors\utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "C:\Users\crist\anaconda3\envs\IESVic_Python\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\crist\anaconda3\envs\IESVic_Python\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Users\crist\anaconda3\envs\IESVic_Python\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\crist\anaconda3\envs\IESVic_Python\lib\asyncio\base_events.py", line 587, in run_until_complete
    return future.result()
  File "C:\Users\crist\anaconda3\envs\IESVic_Python\lib\site-packages\nbclient\client.py", line 664, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "C:\Users\crist\anaconda3\envs\IESVic_Python\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\Users\crist\anaconda3\envs\IESVic_Python\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
# Installations for Google Collab - Uncomment if running through Collab

%%capture
import sys
import os

#!pip install pyomo
!pip install idaes-pse --pre
!idaes get-extensions --to ./bin 
os.environ['PATH'] += ':bin'

##############################################################################

# Imports
from __future__ import division
from fileinput import filename
from pyomo.environ import *
from pyomo.core import *
from pyomo.opt import SolverFactory
import pandas as pd
import numpy as np
import math
import random
from Objective_Function import ObjectiveFunction_rule
from Model_Constraints import *
#from Model_Debugging_Tools import Variable_Frame
#from Model_Sel_Res import Selected_Results

import matplotlib.pyplot as plt
import plotly.express as px
import plotly.graph_objects as go
from plotly.subplots import make_subplots


------------------

[1;36m  File [1;32m"C:\Users\crist\AppData\Local\Temp\ipykernel_17392\3426389492.py"[1;36m, line [1;32m2[0m
[1;33m    [0m
[1;37m    ^[0m
[1;31mSyntaxError[0m[1;31m:[0m import * only allowed at module level

SyntaxError: import * only allowed at module level (3426389492.py, line 2)

